# CvChess

./: README.md  board.py  config.py  main.py  pgn.py  pieces.py  pyproject.toml  replit_zip_error_log.txt
Agenda/: groupeD.ics
CSV_Files/: medias.csv
